<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_d2s"
    tools:context="com.etrans.myd2.activity.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/main_file_explorer"
                style="@style/MainActivtiyButtonStyle">

                <ImageView
                    android:layout_marginBottom="10dp"
                    android:id="@+id/main_file_explorer_image"
                    style="@style/MainActivtiyButtonIconStyle"
                    android:src="@drawable/mainactivity_fileexplorer_selector"
                    />

                <TextView
                    style="@style/MainActivtiyButtonTextStyle"
                    android:text="@string/main_fileexplorer"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_zd_iev"
                style="@style/MainActivtiyButtonStyle">

                <ImageView
                    android:layout_marginBottom="10dp"
                    android:id="@+id/main_zd_iev_image"
                    style="@style/MainActivtiyButtonIconStyle"
                    android:src="@drawable/mainactivity_zdiev_selector" />

                <TextView
                    style="@style/MainActivtiyButtonTextStyle"
                    android:text="@string/zdiev_name"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_maintenance_informatione"
                style="@style/MainActivtiyButtonStyle">

                <ImageView
                    android:layout_marginBottom="10dp"
                    android:id="@+id/main_maintenance_information_image"
                    style="@style/MainActivtiyButtonIconStyle"
                    android:src="@drawable/mainactivity_maintenannce_selector" />

                <TextView
                    style="@style/MainActivtiyButtonTextStyle"
                    android:text="@string/main_maintenannce"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_user_manual"
                style="@style/MainActivtiyButtonStyle">

                <ImageView
                    android:layout_marginBottom="10dp"
                    android:id="@+id/main_user_manual_image"
                    style="@style/MainActivtiyButtonIconStyle"
                    android:src="@drawable/mainactivity_user_manual_selector" />

                <TextView
                    style="@style/MainActivtiyButtonTextStyle"
                    android:text="@string/main_user_manual"
                    android:visibility="visible" />

            </LinearLayout>
        </LinearLayout>

</LinearLayout>
