<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_d2s"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_car_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/carinformation_itembg_selector"
                android:gravity="center"
                android:text="@string/cur"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/carinformation_itembg_selector"
                android:gravity="center"
                android:text="@string/today"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:background="@drawable/carinformation_itembg_selector"
                android:gravity="center"
                android:text="@string/week"
                android:textColor="@color/white"
                android:textSize="28sp" />

        </LinearLayout>

        <View
            android:id="@+id/view_fenge"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ll_car_information"
            android:background="@drawable/tiao" />

        <FrameLayout
            android:id="@+id/fl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view_fenge"
            >

        </FrameLayout>

    </RelativeLayout>

</LinearLayout>