<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout style="@style/imformation_line_style"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/imformation_line_style"
                    android:text="@string/today_driving_kilo"
                    />

                <TextView
                    android:id="@+id/tv_today_driving_kilo"
                    style="@style/imformation_line_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:text="--km" />
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@drawable/tiao" />

            <RelativeLayout
                style="@style/imformation_line_style"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_hundred_kilo_consume"
                    style="@style/imformation_line_style" />

                <TextView
                    android:id="@+id/tv_today_hundred_kilo_consume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:text="--kw.h"
                    style="@style/imformation_line_style" />
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@drawable/tiao" />

            <RelativeLayout style="@style/imformation_line_style"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_charge_soc"
                    style="@style/imformation_line_style" />

                <TextView
                    android:id="@+id/tv_today_charge_soc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:text="--%"
                    style="@style/imformation_line_style" />
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@drawable/tiao" />

        </LinearLayout>

<!--
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/iv_car_door_state"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/state_car"
            />

    </LinearLayout>
-->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:id="@+id/rl_car_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:src="@drawable/state_car"
                android:id="@+id/iv_car_door_state" />
            <ImageView
                android:id="@+id/iv_car_alert"
                android:visibility="invisible"
                android:layout_below="@+id/iv_car_door_state"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/state_alert"
                />
            <TextView
                android:id="@+id/tv_car_state_text"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_car_door_state"
                android:layout_toRightOf="@+id/iv_car_alert"
                android:text="左门开"
                android:textSize="28sp"
                android:textColor="@color/white"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/imformation_line_style"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_driving_time"
                style="@style/imformation_line_style" />

            <TextView
                android:id="@+id/tv_today_driving_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="--小时"
                style="@style/imformation_line_style" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/tiao" />

        <RelativeLayout style="@style/imformation_line_style"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_average_speed"
                style="@style/imformation_line_style" />

            <TextView
                android:id="@+id/tv_today_average_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="--km/h"
                style="@style/imformation_line_style"/>
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/tiao" />

        <RelativeLayout style="@style/imformation_line_style"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_charge_time"
                style="@style/imformation_line_style" />

            <TextView
                android:id="@+id/tv_today_charge_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="--小时"
                style="@style/imformation_line_style" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/tiao" />

    </LinearLayout>


</LinearLayout>